--- a/css/404.css
+++ b/css/404.css
@@ -111,3 +111,13 @@ main {
       transform: scale(0.8); }
     .main-block span {
       transform: scale(0.8); } }
+
+@media (min-width: 320px) and (max-width: 767px) {
+  main {
+    margin: 0;
+    padding: 81px 10px 0 10px; }
+    main .main-block {
+      flex-direction: column;
+      padding: 10px; }
+      main .main-block .right-to-oops {
+        z-index: 2; } }
