--- a/scss/clp.scss
+++ b/scss/clp.scss
@@ -107,3 +107,43 @@ main {
         outline: 0;
     }
 }
+
+@media (min-width: 320px) and (max-width: 767px) {
+    main {
+        margin: 0;
+        padding: 81px 10px 0 10px;
+        #hideFilters, #showFilters {
+            color: #84bc22;
+            font-size: 14px;
+            display: block;
+            margin: 0 auto;
+            width: fit-content;
+            padding: 20px;
+        }
+        .filters {
+            flex-direction: column;
+            .filter {
+                padding: 10px;
+                width: 90%;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                select {
+                    width: 50%;
+                    background-color: #fff;
+                }
+            }
+        }
+        .products-block {
+            margin: auto;
+            .items-noSclick {
+                position: relative;
+                right: 10px;
+                .item:nth-child(n + 5) {
+                    display: none;
+                }
+            }
+        }
+    }
+
+}
