--- a/scss/main.scss
+++ b/scss/main.scss
@@ -629,7 +629,7 @@ button:focus, input:focus {
     h3:not(:empty)::after {
         margin: 0 3em;
     }
-    .items {
+    .items, .items-noSclick {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
@@ -1066,7 +1066,7 @@ footer {
 
 @media(min-width: 768px) and (max-width: 1279px){
     .menu-burger__header {
-        width: 40px;
+        width: 30px;
         height: 35px;
         position: relative;
     }
