--- a/css/404.css
+++ b/css/404.css
@@ -119,5 +119,7 @@ main {
     main .main-block {
       flex-direction: column;
       padding: 10px; }
+      main .main-block span {
+        font-size: 62px; }
       main .main-block .right-to-oops {
         z-index: 2; } }
